--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   </head>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-     <a-marker preset="hiro">
-      <a-box position="0 0 0" material="opacity: 0.5;"></a-box>
+      <a-assets>
+        <a-asset-item id="tree-obj" src="https://https://arjs-cors-proxy.herokuapp.com/raw.githubusercontent.com/aderamdan8889/obj/main/01_pelat_atas.obj"></a-asset-item>
+        <a-asset-item id="tree-mtl" src="https://https://arjs-cors-proxy.herokuapp.com/raw.githubusercontent.com/aderamdan8889/obj/main/01_pelat_atas.mtl"></a-asset-item>
+      </a-assets>    
+      <a-sky color="#ECECEC"></a-sky>
+      <a-entity position="0 0 -5" rotation="90 0 0" scale="0.01 0.01 0.01" obj-model="obj: #tree-obj; mtl: #tree-mtl"></a-entity>
       <a-entity camera></a-entity>
-      </a-marker>
     </a-scene>
   </body>
 </html>
