--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <a-assets>
-        <a-asset-item id="tree-obj" src="https://https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/aderamdan8889/obj/main/01_pelat_atas.obj"></a-asset-item>
-        <a-asset-item id="tree-mtl" src="https://https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/aderamdan8889/obj/main/01_pelat_atas.mtl"></a-asset-item>
+        <a-asset-item id="tree-obj" src="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/aderamdan8889/obj/main/01_pelat_atas.obj"></a-asset-item>
+        <a-asset-item id="tree-mtl" src="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/aderamdan8889/obj/main/01_pelat_atas.mtl"></a-asset-item>
       </a-assets>    
       <a-sky color="#ECECEC"></a-sky>
       <a-marker preset="hiro">
